# quick-dial-app

./:  requirements.txt  README.md  app.py  contacts.csv  index.html  pyproject.toml
